fixed margin bug on nav menu button by wrapping the row in a container

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -38,6 +38,7 @@ button:focus {
 .hidden{
 	display: none;
 	visibility: hidden;
+	margin: 0 !important;
 }
 
 .backgroundIMG{
@@ -60,11 +61,12 @@ button:focus {
 }
 
 .mobile_nav_header{
-	width: 100%;
-	z-index: 25;
+
+	z-index: 10;
 	position: fixed;
 	background-color: rgba(0,0,0,.5);
 	transition: .5s ease;
+	margin: 0 !important;
 }
 
 .navbar{	
@@ -76,6 +78,7 @@ button:focus {
 	z-index: 20;
 	border-bottom: .2rem solid rgba(255,255,255, .4);
 	background: rgba(0,0,0,.4);
+	margin: 0;
 	
 	button{
 		color: white;
@@ -130,6 +133,7 @@ button:focus {
 }
 
 .hero{
+	max-width: 100%;
 	width: 100%;
 	margin: 0px;
 	padding: 0px;
@@ -146,7 +150,7 @@ button:focus {
 	font-size: 100%;
 	height: 30vh;
 	max-width: 100%;
-	margin: 0 auto;
+	margin: 0;
 	margin-bottom: .5rem;
 	position: relative;
 	overflow: hidden;
@@ -215,7 +219,10 @@ button:focus {
 
 
 	.bio_wrapper{
-		margin: 1.5rem;
+		margin-top: 1.5rem;
+		margin-bottom: 1.5rem;
+		margin-left: 0;
+		margin-right: 0;
 		display: flex;
 		align-items: stretch;
 
